(feat) aggiungi supporto JSON per parsing

--- a/database/pom.xml
+++ b/database/pom.xml
@@ -11,12 +11,20 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
     </properties>
-
     <dependencies>
+        <!-- API -->
         <dependency>
             <groupId>javax.json</groupId>
             <artifactId>javax.json-api</artifactId>
             <version>1.1.4</version>
+        </dependency>
+
+        <!-- Implementazione (provider) -->
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.1.4</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
